connect database mysql and create table user, write test unit user repository using flyway, user list ui, pagination(not complete)

--- a/thyme-wizard-application/src/main/resources/i18n/messages_vi.properties
+++ b/thyme-wizard-application/src/main/resources/i18n/messages_vi.properties
@@ -1,4 +1,3 @@
-users.title=Người Dùng
 menu.dashboard=Dashboard
 menu.users=Người Dùng
 menu.teams=Câu Lạc Bộ
@@ -6,3 +5,9 @@ menu.projects=Projects
 menu.calendar=Lịch
 menu.documents=Tài Liệu
 menu.reports=Báo Cáo
+users.title=Người Dùng
+user.name=Tên
+user.gender=Giới tính
+user.birthday=Ngày sinh
+user.email=Email
+edit=Chỉnh sửa
