--- a/thyme-wizard-application/src/main/resources/i18n/messages.properties
+++ b/thyme-wizard-application/src/main/resources/i18n/messages.properties
@@ -1,4 +1,3 @@
-users.title=Users
 menu.dashboard=Dashboard
 menu.users=Users
 menu.teams=Teams
@@ -6,3 +5,12 @@ menu.projects=Projects
 menu.calendar=Calendar
 menu.documents=Documents
 menu.reports=Reports
+menu.profile=Profile
+menu.settings=Settings
+menu.signout=Sign out
+users.title=Users
+user.name=Name
+user.gender=Gender
+user.birthday=Birthday
+user.email=Email
+edit=Edit
