Add paginations features and Create User forms with validation

--- a/thyme-wizard-application/src/main/resources/i18n/messages_vi.properties
+++ b/thyme-wizard-application/src/main/resources/i18n/messages_vi.properties
@@ -11,3 +11,16 @@ user.gender=Giới tính
 user.birthday=Ngày sinh
 user.email=Email
 edit=Chỉnh sửa
+
+#
+# Validation messages
+#
+NotBlank.user.firstName=Vui lòng nhập vào tên của người dùng.
+Size.user.firstName=Tên của người dùng không được vượt quá {1} ký tự.
+NotBlank.user.lastName=Vùi lòng nhập vào họ của người dùng.
+NotNull.user.gender=Vui lòng chọn giới tính của người dùng.
+NotBlank.user.email=Vùi lòng nhập vào địa chỉ email.
+NotNull.user.birthday=Vui lòng nhập vào ngày sinh của người dùng.
+typeMismatch.user.birthday=Vui lòng nhập ngày sinh đúng định dạng: YYYY-MM-DD
+NotNull.user.phoneNumber=Vui lòng nhập vào số điện thoại của người dùng.
+Pattern.user.phoneNumber=Vui lòng nhập số điện thoại đúng định dạng.
